manifest/objects/Msg_Bus_Fields__mdt.object
<CustomObject>
    <fields>
        <fullName>Account_Fields__c</fullName>
        <label>Account Fields</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Fields__c</fullName>
        <label>Contact Fields</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity_Fields__c</fullName>
        <label>Opportunity Fields</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity_Line_Item_Fields__c</fullName>
        <label>Opportunity Line Item Fields</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Parser_Name__c</fullName>
        <label>Parser Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Msg Bus Fields</label>
    <pluralLabel>Msg Bus Fields</pluralLabel>
</CustomObject>